--- a/Pick Up Basketball/Info.plist
+++ b/Pick Up Basketball/Info.plist
@@ -75,6 +75,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
